--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,9 +8,9 @@
   {{#each burgers}}
 
   	<li>
-  	    <p><span class="label">Burger Name:</span> {{this.burger_name}}</p>
+  	    <p><span class="label">Burger Name:</span> {{burger_name}}</p>
 
-        <button data-id="{{this.id}}" class="delquote">Devour</button>
+        <button data-id="{{id}}" class="delquote">Devour</button>
 
   	</li>
 
