--- a/views/partials/cats/cat-block.handlebars
+++ b/views/partials/cats/cat-block.handlebars
@@ -1,9 +1,8 @@
 <li>
-	{{name}}
+	{{burger_name}}
 
-	<button class="change-sleep" data-id="{{id}}" data-newsleep="{{sleep}}">
-		{{#if sleep}}SLEEP TIME!{{else}}WAKE UP!{{/if}}
-	</button>
+	{{#if sleep}}<button class="change-sleep" data-id="{{id}}" data-newsleep="{{sleep}}">
+		Devour!
+	</button>{{/if}}
 
-	<button class="delete-cat" data-id="{{this.id}}">DELETE!</button>
 </li>
